--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,19 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "iosfwd": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "stdio.h": "c",
+        "unordered_set": "cpp",
+        "initializer_list": "cpp",
+        "unordered_map": "cpp",
+        "iomanip": "cpp",
+        "chrono": "cpp",
+        "thread": "cpp",
+        "array": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp",
+        "typeinfo": "cpp",
+        "*.tcc": "cpp",
+        "string": "cpp"
     }
 }
