add observer pattern

--- a/design-pattern/observer-pattern/Makefile
+++ b/design-pattern/observer-pattern/Makefile
@@ -1,8 +1,13 @@
-SRCE = main.cpp
-INCLUDE = observer.h
-TARGET = main
-main:
-	g++ ${INCLUDE} ${SRCE} -o ${TARGET}
+SRCE = observer_v1.cpp
+INCLUDE = $(wildcard *.h)
+TARGET = v1 v2
+OBJ = $(SRC:.cpp=.o)
+
+v1: observer_v1.cpp $(INCLUDE)
+	g++ ${INCLUDE} observer_v1.cpp -o $@
+
+v2: general_main.cpp $(INCLUDE)
+	g++ ${INCLUDE} general_main.cpp -o $@
 
 clean:
-	rm ${TARGET}
+	rm -f $(TARGET) $(OBJ) *.gch
